--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,8 +4,7 @@
       <h2 class="nav-title">{{ site.title }}</h2>
     </a>
     <ul>
-      <li><a href="{{ '/patents-and-publications' | prepend: site.baseurl }}">Patents and Publications</a></li>
-      <li><a href="{{ '/talks' | prepend: site.baseurl }}">Talks</a></li>
+      <li><a href="{{ '/publications' | prepend: site.baseurl }}">Publications</a></li>
       <li><a href="https://github.com/donaghhorgan">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/donaghhorgan/">LinkedIn</a></li>
     </ul>
